ops/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
      - name: bookstore
        image: cyrilbaah/bookstore
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "1"
          requests:
            memory: "600Mi"
            cpu: "750m"
        ports:
          - containerPort: 8000
