ops/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstore
spec:
  type: LoadBalancer
  selector:
    app: bookstore
  ports:
    - port: 8000
      targetPort: 8000
