ops/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore
spec:
  rules:
    - host: bookstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstore
                port:
                  number: 8000
